--- a/Oradio3/webapp/templates/captiveportal.html
+++ b/Oradio3/webapp/templates/captiveportal.html
@@ -14,45 +14,69 @@
 		<link rel="stylesheet" href="../static/css/pure.min.css" />
 		<link rel="stylesheet" href="../static/css/oradio3-wifi.css" />
 
-		<title>Configuration</title>
+		<title>Oradio</title>
 	</head>
 	<body>
 		{% include "menu.html" %}
 
-		<h2 class="oradio-header">Verbind met WiFi-netwerk</h2>
-
 		<div class="oradio-container">
 
-			<form class="pure-form pure-form-aligned">
-				<fieldset>
+			<!-- Only show when page is loaded via the Oradio access point -->
+			<div id="captiveportal">
 
-					<div class="pure-controls">
-						<p id="active" class="hide">
+				<div class="pure-controls">
+					<h3 class="oradio-header">Verbind met WiFi-netwerk</h3>
+				</div>
+
+				<form class="pure-form pure-form-aligned">
+					<fieldset>
+
+						<div class="pure-control-group">
+							<label for="SSIDs">Netwerk</label>
+							<select id="SSIDs" class="oradio-input placeholder" onchange="networkSelected()"></select>
+						</div>
+
+						<div id="cg-password" class="pure-control-group hide">
+							<label for="password">Wachtwoord</label>
+							<input id="password" class="oradio-input" type="password" placeholder="Voer WiFi-wachtwoord in" />
+							<span class="password-toggle-icon oradio-eye"><i class="fa-regular fa-eye"></i></span>
+						</div>
+
+						<div id="cg-submit" class="pure-controls hide">
+							<button type="submit" class="pure-button pure-button-primary" onclick="submitCredentials()">Submit</button>
+						</div>
+
+						<div id="notification" class="pure-controls">
 							<!-- Will be filled by Javascript submitCredentials() -->
-						</p>
-					</div>
+						</div>
 
-					<div class="pure-control-group">
-						<label for="SSIDs">Netwerk</label>
-						<select id="SSIDs" class="oradio-input placeholder" onchange="networkSelected()"></select>
-					</div>
 
-					<div id="cg-password" class="pure-control-group hide">
-						<label for="password">Wachtwoord</label>
-						<input id="password" class="oradio-input" type="password" placeholder="Voer WiFi-wachtwoord in" />
-						<span class="password-toggle-icon oradio-eye"><i class="fa-regular fa-eye"></i></span>
-					</div>
+					</fieldset>
+				</form>
 
-					<div id="cg-submit" class="pure-controls hide">
-						<button type="submit" class="pure-button pure-button-primary" onclick="submitCredentials()">Submit</button>
-					</div>
+			</div>
 
-					<div id="notification" class="pure-controls">
+			<!-- Only show when page is loaded via a wifi network -->
+			<div id="home">
+
+				<div class="pure-controls">
+					<p id="active" class="hide">
 						<!-- Will be filled by Javascript submitCredentials() -->
-					</div>
+					</p>
+				</div>
 
-				</fieldset>
-			</form>
+				<!--TODO: Hier de naam tonen worden die via instellingen ingesteld is -->
+				<h3>Welkom op de Oradio pagina!</h3>
+				<p>Hier heeft u de volgende mogelijkheden:</p>
+				<ul>
+					<li>De Oradio <a href="/controls">op afstand bedienen</a></li>
+					<li>De 1-2-3 knoppen <a href="/playlists">instellen welke speellijst afgespeeld wordt</a></li>
+					<li>De Oradio <a href="/status">instellingen inzien en veranderen</a></li>
+				</ul>
+
+				<p>Mocht u vragen hebben, neem dan aub <a href="https://stichtingoradio.nl" target="_blank">contact</a> op.</p>
+
+			</div>
 
 		</div>
 
@@ -116,11 +140,16 @@
 		// Initialize page layout
 		if ((active != "None") && (active != "OradioAP"))
 		{
+			// Show active network connection
+			document.getElementById("captiveportal").classList.add("hide");
+
 			// Show which wifi network the Oradio is currently connected to
 			document.getElementById("active").innerHTML = "De Oradio is verbonden met WiFi-netwerk <b>" + active + "</b>";
-
+		}
+		else
+		{
 			// Show active network connection
-			document.getElementById("active").classList.remove("hide");
+			document.getElementById("home").classList.add("hide");
 		}
 
 		// Create selector with available networks
