Add test if usb is mounted

--- a/Oradio3/templates/captiveportal.html
+++ b/Oradio3/templates/captiveportal.html
@@ -40,7 +40,7 @@
 					</div>
 
 					<div id="cg-submit" class="pure-controls hide">
-						<button type="submit" class="pure-button pure-button-primary" onclick="submitCredentials()">Submit</button>
+						<button type="submit" class="pure-button pure-button-primary" onclick="submitCredentials()">Verbind</button>
 					</div>
 
 					<div id="notification" class="pure-controls">
