--- a/Python/templates/playlists.html
+++ b/Python/templates/playlists.html
@@ -17,23 +17,12 @@
 		<title>Oradio</title>
 	</head>
 	<body>
-		{% include "menu.html" %}
 
 		<div class="oradio-container">
 
-			<div class="pure-controls">
-				<p id="active" class="hide">
-					<!-- Will be filled by Javascript submitCredentials() -->
-				</p>
-			</div>
-
 			<!--TODO: Hier de naam tonen worden die via instellingen ingesteld is -->
 			<h3>Welkom op de Oradio pagina!</h3>
-			<p>Hier heeft u de volgende mogelijkheden:</p>
-			<ul>
-				<li>De Oradio <a href="/controls">op afstand bedienen</a></li>
-				<li>De 1-2-3 knoppen <a href="/playlists">instellen welke speellijst afgespeeld wordt</a></li>
-			</ul>
+			<p>Hier komen binnenkort de playlist opties</p>
 
 			<p>Mocht u vragen hebben, neem dan aub <a href="https://stichtingoradio.nl" target="_blank">contact</a> op.</p>
 
