--- a/Python/templates/captiveportal.html
+++ b/Python/templates/captiveportal.html
@@ -4,49 +4,44 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- From OpenNDS splash page -->
+		<!-- From OpenNDS splash page -->
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 
 		<link rel="stylesheet" href="../static/css/fontawesome.min.css" />
 		<link rel="stylesheet" href="../static/css/regular.min.css" />
-		<link rel="stylesheet" href="../static/css/pure.min.css" />
 		<link rel="stylesheet" href="../static/css/oradio3.css" />
+		<link rel="stylesheet" href="../static/css/captiveportal.css" />
 
-		<title>Oradio</title>
+		<title>Oradio wifi instellen</title>
 	</head>
 	<body>
-		<div class="oradio-container">
+		<div class="container">
+			<h1 >Verbind met WiFi-netwerk</h1>
 
-			<div class="pure-controls">
-				<h3 class="oradio-header">Verbind met WiFi-netwerk</h3>
-			</div>
+			<form>
 
-			<form class="pure-form pure-form-aligned">
-				<fieldset>
+				<label for="SSIDs">Netwerk:</label>
+				<select id="SSIDs" onchange="networkSelected()">
+					<option selected hidden disabled value="PLACEHOLDER">Selecteer uw WiFi-netwerk</option>
+					{% for network in networks %}
+						<option value="{{ network }}">{{ network }}</option>
+					{% endfor %}
+				</select>
 
-					<div class="pure-control-group">
-						<label for="SSIDs">Netwerk</label>
-						<select id="SSIDs" class="oradio-input placeholder" onchange="networkSelected()"></select>
-					</div>
+				<div id="password">
+					<label for="pswd">Wachtwoord:</label>
+					<input id="pswd" class="pswd-input" type="password" placeholder="Voer WiFi-wachtwoord in" />
+					<span class="password-toggle-icon oradio-eye"><i class="fa-regular fa-eye"></i></span>
+				</div>
 
-					<div id="cg-password" class="pure-control-group hide">
-						<label for="password">Wachtwoord</label>
-						<input id="password" class="oradio-input" type="password" placeholder="Voer WiFi-wachtwoord in" />
-						<span class="password-toggle-icon oradio-eye"><i class="fa-regular fa-eye"></i></span>
-					</div>
+				<button type="submit" id="submit" onclick="submitCredentials()">Instellen</button>
 
-					<div id="cg-submit" class="pure-controls hide">
-						<button type="submit" class="pure-button pure-button-primary" onclick="submitCredentials()">Verbind</button>
-					</div>
+				<div id="notification" class="notification">
+					<!-- Will be filled by Javascript submitCredentials() -->
+				</div>
 
-					<div id="notification" class="pure-controls">
-						<!-- Will be filled by Javascript submitCredentials() -->
-					</div>
-
-
-				</fieldset>
 			</form>
 
 		</div>
@@ -54,88 +49,28 @@
 	</body>
 
 	<script>
-
-		var list = "{{ list }}";	// Provided by Oradio web server
-		if (list != "\{\{ list \}\}")
-			var networks = JSON.parse(decodeHtml(list));
-		else
-			// For testing page without being served through Oradio web server
-			var networks = [
-				{"ssid": "Apple", "security": true},
-				{"ssid": "Banana", "security": false},
-				{"ssid": "Lemon", "security": true},
-				{"ssid": "Orange", "security": false},
-			];
-//console.log("list=", list);
-
-		// Decode HTML characters 
-		function decodeHtml(html)
-		{
-			var txt = document.createElement("textarea");
-			txt.innerHTML = html;
-			return txt.value;
-		}
-
 		// Change form to reflect selected network
 		function networkSelected()
 		{
-			// Remove style attribute
-			document.getElementById('SSIDs').classList.remove("placeholder");
-
-			// Get selected network info
-			const network = networks[document.getElementById("SSIDs").value];
-
-			// Customize password placeholder
-			document.getElementById("password").placeholder = "Geef wachtwoord van '" + network.ssid + "'";
-
-			// Show password input if network requires one, and submit button
-			if (network.security)
-				document.getElementById("cg-password").classList.remove("hide");
-			else
-				document.getElementById("cg-password").classList.add("hide");
-			document.getElementById("cg-submit").classList.remove("hide");
-
 			// Clear notification
 			document.getElementById('notification').innerHTML = "";
 		}
 
-		// Create selector with available networks
-		var sel = document.getElementById('SSIDs');
-
-		// Add HTML placeholder element for no network selected yet
-		var opt = document.createElement('option');				// Create HTML element
-		opt.innerHTML = "Selecteer uw WiFi-netwerk";			// Set user prompt
-		opt.selected = true;									// Set selected
-		opt.hidden = true;										// Do not show option in drop down list. Safari/iOS - does not respect this :-(
-		opt.disabled = true;									// Work-around for Safari/iOS: visible but not selectable
-		sel.appendChild(opt);									// Add option to select element
-
-		// Add select option for each available network
-		for(var i = 0; i < networks.length; i++)
-		{
-			var opt = document.createElement('option');		// Create HTML element
-			opt.innerHTML = networks[i].ssid;				// Set user prompt
-			opt.value = i;									// Set index in networks
-
-			opt.style = "color: #000";						// Show prompt in black, not dark-grey (placeholder)
-			sel.appendChild(opt);							// Add option to select element
-		}
-
 		// Toggle password visibility
-		const passwordField = document.getElementById("password");
+		const password = document.getElementById("pswd");
 		const togglePassword = document.querySelector(".password-toggle-icon i");
-
 		togglePassword.addEventListener("click", function ()
 		{
-			if (passwordField.type === "password")
+
+			if (password.type === "password")
 			{
-				passwordField.type = "text";
+				password.type = "text";
 				togglePassword.classList.remove("fa-eye");
 				togglePassword.classList.add("fa-eye-slash");
 			}
 			else
 			{
-				passwordField.type = "password";
+				password.type = "password";
 				togglePassword.classList.remove("fa-eye-slash");
 				togglePassword.classList.add("fa-eye");
 			}
@@ -149,19 +84,24 @@
 			// Get notification element
 			const notification = document.getElementById('notification');
 
+			// Clear old notification
+			notification.innerHTML = "";
+
 			// Get selected network info
-			const network = networks[document.getElementById("SSIDs").value];
-
-			// Get password
-			const pswd = document.getElementById("password").value;
-
-			// Show password input if network requires one, and submit button
-			if (network.security && (pswd.length == 0))
+			var ssid = document.getElementById("SSIDs").value;
+			if (ssid == "PLACEHOLDER")
 			{
-				notification.innerHTML = "<p style=\"color: #ff0000;\">Wifi-netwerk '" + network.ssid + "' heeft een netwerk nodig.</p>";
+				notification.innerHTML = "<div style=\"color: #ff0000;\">Kies een wifi netwerk</div>";
 				return;
 			}
 
+			// Get password
+			var pswd = document.getElementById("pswd").value;
+			if (pswd.length <= 8)
+			{
+				notification.innerHTML = "<p style=\"color: #ff0000;\">Wachtwoord moet minimaal 8 karakters zijn</p>";
+				return;
+			}
 
 			// Send credentials to server
 			try
@@ -171,14 +111,12 @@
 					headers: {
 						'Content-Type': 'application/json'
 					},
-					body: JSON.stringify({ "ssid": network.ssid, "pswd": pswd })
+					body: JSON.stringify({ "ssid": ssid, "pswd": pswd })
 				});
-
-console.log("response=", response);
 
 				if (response.ok)
 				{
-					notification.innerHTML = "<p>De huidige verbinding wordt verbroken.</p><p>Oradio probeert te verbinden met '" + network.ssid + "'</p>";
+					notification.innerHTML = "<p>De huidige verbinding wordt verbroken.</p><p>Oradio probeert te verbinden met '" + ssid + "'</p>";
 				}
 				else
 				{
