WIP version for playlist handling via web interface
WIP as it shows where it is going
Functionality is not yet complete!

--- a/Python/static/css/oradio3.css
+++ b/Python/static/css/oradio3.css
@@ -78,6 +78,7 @@ button {
 	cursor: pointer;
 	transition: background-color 0.3s;
 	margin-bottom: 20px;
+	align-items: center;
 }
 
 button:hover {
@@ -87,6 +88,7 @@ button:hover {
 ul {
 	list-style-type: none;
 	padding-left: 0;
+	margin-block-start: 0;
 }
 
 li {
