--- a/Python/static/css/playlists.css
+++ b/Python/static/css/playlists.css
@@ -11,39 +11,30 @@
  * Colors: https://www.computerhope.com/htmcolor.htm
  */
 
-div .banner {
-	width: 100%;
-	background-color: #804A00;
-	color: #FFFFFF;
-	border: none;
-	border-radius: 5px;
-	padding: 10px;
-	font-size: 16px;
-	margin-left: -10px;
-	margin-bottom: 20px;
-	text-align: center;
-}
-
 .preset-grid {
 	display: grid;
 	margin-bottom: 20px;
 	grid-template-columns: 0.5fr 1.5fr
 }
+
 .preset-label {
 	font-weight: bold;
     align-self: center;
 }
+
 .preset-select {
 	margin-bottom: 0px;
     align-self: center;
 }
 
 .file-list {
-	padding: 5px;
-	margin-bottom: 10px;
+	padding: 0 5px 0 5px;
+	line-height: 1.5;
+	margin-bottom: 20px;
 	border-radius: 5px;
 	background-color: #14213D;
 	color: rgb(234, 232, 221);
 	max-height: 200px;
 	overflow-y: auto;
+	scrollbar-width: none;
 }
