Add menu to web interface pages
Bottom menu: https://github.com/oradiolabs/Oradio3/issues/52

--- a/Python/static/css/oradio3.css
+++ b/Python/static/css/oradio3.css
@@ -27,6 +27,7 @@ body {
 	max-width: 400px;
 	width: 100%;
 	padding: 20px;
+	margin-bottom: 60px;			/* allow space for bottom menu */
 	background-color:#1F2933;
 	border-radius: 10px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
