--- a/Python/templates/captiveportal.html
+++ b/Python/templates/captiveportal.html
@@ -17,6 +17,7 @@
 		<title>Oradio wifi instellen</title>
 	</head>
 	<body>
+		{% include "menu.html" %}
 		<div class="container">
 
 			<!-- Show Oradio logo -->
