--- a/Python/templates/playlists.html
+++ b/Python/templates/playlists.html
@@ -12,6 +12,7 @@
 		<title>Oradio speellijsten</title>
 	</head>
 	<body>
+		{% include "menu.html" %}
 		<div class="container">
 
 			<!-- Show Oradio logo -->
