--- a/Python/templates/status.html
+++ b/Python/templates/status.html
@@ -21,14 +21,14 @@
 			<table>
 				<tr>
 					<th>Parameter</th>
-					<th>Value</th>
+					<th>Waarde</th>
 				</tr>
 				<tr>
-					<td>Oradio serial number</td>
+					<td>Oradio serienummer</td>
 					<td>{{ serial }}</td>
 				</tr>
 				<tr>
-					<td>Wifi network SSID</td>
+					<td>Wifi netwerk SSID</td>
 					<td>{{ network }}</td>
 				</tr>
 			</table>
