Password lenght check fix
Fix voor issue  https://github.com/oradiolabs/Oradio3/issues/155

--- a/Python/templates/captiveportal.html
+++ b/Python/templates/captiveportal.html
@@ -97,7 +97,7 @@
 
 			// Get password
 			const pswd = document.getElementById("pswd").value;
-			if (pswd.length <= 8)
+			if (pswd.length < 8)
 			{
 				notification.innerHTML = "<p class=\"error\">Wachtwoord moet minimaal 8 karakters zijn</p>";
 				return;
